Initial version, partially working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "*.yaml": "home-assistant"
     },
     "cSpell.words": [
+        "dateutil",
         "HACS",
         "hass",
         "hassfest",
         "homeassistant",
+        "relativedelta"
     ],
 }
