--- a/custom_components/chore_helper/manifest.json
+++ b/custom_components/chore_helper/manifest.json
@@ -1,13 +1,17 @@
 {
   "domain": "chore_helper",
-  "name": "Chore Helper",
+  "name": "Chore",
   "codeowners": [
     "@bmcclure"
   ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/bmcclure/ha-chore-helper",
-  "iot_class": "cloud_polling",
+  "integration_type": "helper",
+  "iot_class": "calculated",
   "issue_tracker": "https://github.com/bmcclure/ha-chore-helper/issues",
-  "version": "1.0.0"
+  "requirements": [
+    "python-dateutil>=2.8.2"
+  ],
+  "version": "0.1.0"
 }
