Add bmcclure to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "*.yaml": "home-assistant"
     },
     "cSpell.words": [
+        "bmcclure",
         "dateutil",
         "HACS",
         "hass",
